chore: :heavy_plus_sign: add dependencies
This commit adds the following dependencies: php-orders library

--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "ecotone/laravel": "^1.87",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "mateusmacedo/php-orders": "^0.0.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -61,6 +63,6 @@
             "php-http/discovery": true
         }
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true
 }
