--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "mateusmacedo/php-orders": "^0.0.1"
+        "mateusmacedo/php-orders": "dev-master"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -24,9 +24,10 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/",
+            "Api\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
+
         }
     },
     "autoload-dev": {
